--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
+    "@svgr/webpack": "^8.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.540.0",
+    "lucide-react": "^0.544.0",
+    "motion": "^12.23.12",
     "next": "15.5.0",
     "query-string": "^9.2.2",
+    "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-svg": "^16.3.0",
+    "react-use-measure": "^2.1.7",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
