--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@base-ui-components/react": "^1.0.0-beta.3",
     "@headlessui/react": "^2.2.8",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -30,13 +31,16 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "html-react-parser": "^5.2.6",
+    "isomorphic-dompurify": "^2.28.0",
     "lucide-react": "^0.544.0",
-    "motion": "^12.23.15",
+    "motion": "^12.23.16",
     "next": "15.5.0",
     "query-string": "^9.2.2",
     "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-lottie": "^1.2.10",
     "react-use-measure": "^2.1.7",
     "tailwind-merge": "^3.3.1"
   },
@@ -46,6 +50,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-lottie": "^1.2.10",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
     "prettier": "^3.6.2",
