--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-lottie": "^1.2.10",
     "react-use-measure": "^2.1.7",
     "tailwind-merge": "^3.3.1",
+    "vaul": "^1.1.2",
     "zod": "^4.1.11"
   },
   "devDependencies": {
